Rigging : Clear User transform is not working when mesh is in weight paint mode #43776

Closed
opened 2015-02-22 11:56:21 +01:00 by Julien Duroure · 7 comments
Member

System Information
Ubuntu 14.04, GTX 860M

Blender Version
2.73a

Rigging : Clear User transform (single or all) is not working when mesh is in weight paint mode.

Exact steps for others to reproduce the error

  • open .blend file. You should be on weight paint mode on mesh + pose mode for bones
  • try to use operator "Clear User Transform" or "Clear User Transform (all)" --> Not working
  • Alt+G + Alg+R + Alt+S are correctly working

Problem is not linked to this specific file, I have same problem with all files.

Don't hesitate to contact me is you need more information.

Julien

clear_user_transform.blend

**System Information** Ubuntu 14.04, GTX 860M **Blender Version** 2.73a Rigging : Clear User transform (single or all) is not working when mesh is in weight paint mode. **Exact steps for others to reproduce the error** * open .blend file. You should be on weight paint mode on mesh + pose mode for bones * try to use operator "Clear User Transform" or "Clear User Transform (all)" --> Not working * Alt+G + Alg+R + Alt+S are correctly working Problem is not linked to this specific file, I have same problem with all files. Don't hesitate to contact me is you need more information. Julien [clear_user_transform.blend](https://archive.blender.org/developer/F145246/clear_user_transform.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Author
Member

Forgot to specify that these operators are available via specials menu W

Forgot to specify that these operators are available via specials menu W
Bastien Montagne self-assigned this 2015-02-23 12:22:52 +01:00

Will fix, but please note that 'clear user transforms' is not the same as 'clear transforms', the later will reset to rest pose (i.e. EditMode state), while the former only reset to current keyframed poses.

Will fix, but please note that 'clear user transforms' is not the same as 'clear transforms', the later will reset to rest pose (i.e. EditMode state), while the former only reset to current keyframed poses.

This issue was referenced by ec36e3ae80

This issue was referenced by ec36e3ae80f993b3d1185dadd1d2ee5d54978501

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ec36e3ae80.

Closed by commit ec36e3ae80.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43776
No description provided.