Fix T43776: Rigging : Clear User transform is not working when mesh is in weight paint mode.

Use same trick as for regular 'clear transform' operators to get a valid armature
in weight paint mode (where active object is weight-painted one).